[gd_scene load_steps=5 format=2]

[ext_resource path="res://Note.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1.511, 0.441, 0.997 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.321569, 1, 0.156863, 1 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -0.7555, 0.2205, 0.4985, 0.7555, 0.2205, -0.4985, 0.7555, 0.2205, 0.4985, -0.7555, 0.2205, -0.4985, -0.7555, -0.2205, 0.4985, 0.7555, -0.2205, -0.4985, 0.7555, -0.2205, 0.4985, -0.7555, -0.2205, -0.4985, 0.7555, 0.2205, 0.4985, -0.7555, 0.2205, -0.4985, 0.7555, 0.2205, -0.4985, -0.7555, 0.2205, 0.4985, 0.7555, -0.2205, 0.4985, -0.7555, -0.2205, -0.4985, 0.7555, -0.2205, -0.4985, -0.7555, -0.2205, 0.4985, 0.7555, 0.2205, 0.4985, -0.7555, -0.2205, 0.4985, -0.7555, 0.2205, 0.4985, 0.7555, -0.2205, 0.4985, 0.7555, 0.2205, -0.4985, -0.7555, -0.2205, -0.4985, -0.7555, 0.2205, -0.4985, 0.7555, -0.2205, -0.4985 )

[node name="Note" type="Spatial"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="HitTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ReturnTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )
[connection signal="tween_completed" from="HitTween" to="." method="_on_HitTween_tween_completed"]
[connection signal="area_shape_entered" from="Area" to="." method="_on_Area_area_shape_entered"]
